# francor_operator

./: README.md
francor_gui/: CMakeLists.txt  package.xml
francor_gui/src/: FrancorGuiNode.cpp  FrancorGuiNode.hpp  FrancorWidget.cpp  FrancorWidget.hpp  francor_gui.ui  main.cpp
francor_joy2vel/: CMakeLists.txt  package.xml
francor_joy2vel/include/francor_joy2vel/: FrancorJoy2Vel.h  JoyMap.h  JoyMapPs4.h  JoyMapPs5.h  JoyMapSc.h  JoyMapScNative.h
francor_joy2vel/launch/: default.launch  default.launch.py  default_bridge.launch.py  default_sim.launch  robocup_2019_final_operator.launch
francor_joy2vel/param/: default.yaml
francor_joy2vel/src/: FrancorJoy2Vel.cpp  FrancorJoy2Vel.h  main.cpp
francor_operator/: CMakeLists.txt  package.xml
francor_overlay_hack/: CMakeLists.txt  package.xml
francor_overlay_hack/launch/: default.launch  robot_2x_overlay.launch
francor_overlay_hack/src/: FrancorOverlayHackNode.cpp  FrancorOverlayHackNode.h
francor_rqt_plugins/: CMakeLists.txt  package.xml
francor_rqt_plugins/launch/: default.launch
francor_rqt_plugins/src/: my_plugin.cpp  my_plugin.h
