<?xml version="1.0"?>
<package>
  <name>francor_operator</name>
  <version>0.0.0</version>
  <description>Franc0r Operator meta package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="m4ffle@googlemail.com">m1ch1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>francor_joy2vel</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
